--- a/.jshintrc
+++ b/.jshintrc
@@ -42,7 +42,7 @@
 	"boss"          : false,     // true: Tolerate assignments where comparisons would be expected
 	"debug"         : false,     // true: Allow debugger statements e.g. browser breakpoints.
 	"eqnull"        : false,     // true: Tolerate use of `== null`
-	"es5"           : true,      // true: Allow ES5 syntax (ex: getters and setters)
+	"es5"           : false,     // true: Allow ES5 syntax (ex: getters and setters)
 	"esnext"        : false,     // true: Allow ES.next (ES6) syntax (ex: `const`)
 	"moz"           : false,     // true: Allow Mozilla specific syntax (extends and overrides esnext features)
 								 // (ex: `for each`, multiple try/catch, function expression…)
@@ -89,6 +89,8 @@
 
 	// Custom Globals
 	"globals"       : {
+		"angular": false,
+		"io": false,
 		"_" : false,
 		"$" : false
 	}
