--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "bower-files": "^3.11.3",
+    "del": "^2.2.0",
     "event-stream": "^3.3.2",
     "gulp": "^3.9.0",
     "gulp-angular-templatecache": "^1.8.0",
@@ -29,6 +30,7 @@
     "gulp-inject": "^3.0.0",
     "gulp-jshint": "^2.0.0",
     "gulp-minify-css": "^1.2.3",
+    "gulp-rev": "^6.0.1",
     "gulp-sass": "^2.1.1",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.1",
